# SimplePiano

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  CMakePresets.json  Contributing.md  Makefile  README.md  build.ninja  cmake_mingw32_toolchaing.cmake  dependencies.dot  dependencies.dot.OpenALOpenAL.dependers  dependencies.dot.OpenGLOpenGL.dependers  dependencies.dot.PianoApp  dependencies.dot.PianoCore  dependencies.dot.PianoCore.dependers  dependencies.dot.ZLIBZLIB.dependers  dependencies.dot.glfw.dependers
PianoApp/: CMakeLists.txt  main.cpp
PianoCore/: CMakeLists.txt
PianoCore/inc/: IRenderer.h  OpenGlRenderer.h  RendererFactory.h
PianoCore/inc/application/: Application.h  ApplicationConstants.h  ApplicationState.h  IAppLayer.h
PianoCore/inc/audio/: audio.h
PianoCore/inc/components/: BoundingBoxComponent.h  Camera.h  Material.h  Mesh.h  Model.h  Transform.h
PianoCore/inc/core/: assert.h  buffer.h  gtest_math.h  list.h
PianoCore/inc/debug/: debugUI.h
PianoCore/inc/ecs/: ComponentController.h  ComponentList.h  Entity.h  System.h  Types.h  World.h
PianoCore/inc/graphics/: IndexBuffer.h  OpenGLLine.h  VertexArray.h
PianoCore/inc/graphics/opengl/: triangle.h
PianoCore/inc/input/: InputKeys.h  InputManager.h
PianoCore/inc/physics/: Ray.h  Raycasting.h
PianoCore/inc/shaders/: IShader.h  OpenGlShader.h  simple_fragment.h
PianoCore/lib/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_stdlib.cpp  imgui_stdlib.h  imgui_tables.cpp  imgui_widgets.cpp  implot.cpp  implot.h  implot_internal.h  implot_items.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
PianoCore/src/: OpenGlRenderer.cpp
PianoCore/src/application/: Application.cpp
PianoCore/src/audio/: audio.cpp
PianoCore/src/components/: BoundingBoxComponent.cpp  Camera.cpp  GameObject.cpp  Material.cpp  Mesh.cpp
PianoCore/src/components/camera/: Camera.cpp
PianoCore/src/debug/: debugUI.cpp
PianoCore/src/engine/: GLFWWindow.h  IRenderer.h  IWindow.h  OpenGlRenderer.cpp  OpenGlRenderer.h  RendererFactory.h
PianoCore/src/engine/core/: buffer.h  log.h
PianoCore/src/engine/debug/: debugUI.h
PianoCore/src/engine/graphics/: IndexBuffer.cpp  Structures.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.cpp  VertexBufferLayout.h
PianoCore/src/engine/graphics/opengl/: cube.cpp
PianoCore/src/engine/input/: InputKeys.h  InputState.h
PianoCore/src/engine/shaders/: OpenGlShader.cpp  OpenGlShader.h  simple_fragment.h  simple_vertex.h
PianoCore/src/game/components/: Material.cpp  Material.h  Model.h  ModelComponent.h
PianoCore/src/graphics/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  shapes.cpp
PianoCore/src/graphics/opengl/: cube.cpp  triangle.cpp
PianoCore/src/input/: InputKeys.cpp  InputManager.cpp  InputState.cpp
PianoCore/src/shaders/: OpenGlShader.cpp
PianoGame/: CMakeLists.txt
PianoGame/src/: main.cpp
PianoGame/src/components/: Gravity.h  Renderable.h  Rigidbody.h
PianoGame/src/io/: glm_format.h
PianoGame/src/layers/: DebugLayer.cpp  DebugLayer.h  GameLayer.cpp  GameLayer.h
PianoGame/src/systems/: BobbleSystem.cpp  BobbleSystem.h  InputSystem.cpp  InputSystem.h  PhsyicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h
docs/: component_structure.md  framerate.md  roadmap.md
imgui/: imgui_stdlib.h
inc/assimp/: revision.h
lib/audio/: audio.cpp  audio.h
lib/graphics/: shapes.cpp  shapes.h
lib/graphics/opengl/: cube.cpp  cube.h  triangle.cpp  triangle.h
lib/input/: input.cpp  input.h
lib/rendering/: shapes.cpp  shapes.h
lib/rendering/opengl/: triangle.cpp  triangle.h
lib/shaders/: IShader.h  OpenGlShader.cpp  OpenGlShader.h  openGlShaders.cpp  openGlShaders.h  simple_fragment.h
lib/ui/: contants.h  debugUI.cpp  debugUI.h  glad.c
lib/util/: timer.h
resources/shaders/: base.frag  cube.frag  cube.vert
shaders/: base.frag  base.vert
src/: GameLayer.cpp  GameLayer.h  appstate.h  main.cpp
src/application/: contants.h
src/components/camera/: Camera.cpp  Camera.h
src/engine/: GLFWWindow.cpp  GLFWWindow.h  IRenderer.h  IWindow.h  OpenGlRenderer.cpp  OpenGlRenderer.h  RendererFactory.h
src/engine/application/: Application.cpp  Application.h  ApplicationConstants.h  ApplicationState.h  IAppLayer.h
src/engine/audio/: audio.cpp  audio.h
src/engine/core/: assert.h  buffer.h  list.h  log.h  pointer.h
src/engine/debug/: DebugState.h  debugUI.cpp  debugUI.h
src/engine/graphics/: IndexBuffer.cpp  IndexBuffer.h  Structures.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  shapes.cpp  shapes.h
src/engine/graphics/opengl/: cube.h  triangle.cpp  triangle.h
src/engine/input/: InputKeys.cpp  InputKeys.h  InputManager.cpp  InputManager.h  InputState.cpp  InputState.h
src/engine/physics/: Raycasting.h
src/engine/shaders/: IShader.h  OpenGlShader.cpp  OpenGlShader.h
src/game/components/: BoundingBoxComponent.cpp  BoundingBoxComponent.h  Component.h  GameObject.cpp  GameObject.h  Material.h  Mesh.cpp  Mesh.h  Model.h  ModelComponent.h  SelectableComponent.h  Transform.h
src/layers/: DebugLayer.cpp  DebugLayer.h  GameLayer.cpp  GameLayer.h
src/util/: timer.h
tests/: CMakeLists.txt  piano_math.test.cpp
